--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,6 +43,7 @@ set -g status-left "#[fg=colour52]#S #[fg=yellow]#I #[fg=cyan]#P | #{prefix_high
 set -g status-right-length 80
 # 设置状态栏右边内容，这里设置为时间信息
 set -g status-right "CPU:#{cpu_percentage} | %a %h-%d %H:%M "
+#set -g status-left 'Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 # 窗口信息居中显示
 set -g status-justify centre
  
@@ -84,9 +85,20 @@ setw -g mode-keys vi
 #bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
+#bind -t vi-copy 'v' begin-selection
 #bind -t vi-copy 'y' copy-selection
-bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+#bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+
+# Use vim keybindings in copy mode
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
 
 
 set -g @plugin 'tmux-plugins/tpm'
@@ -94,8 +106,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'seebi/tmux-colors-solarized'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-yank'
+#set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @colors-solarized 'dark'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
 run '~/.tmux/plugins/tpm/tpm'
