--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,8 +42,7 @@ set -g status-left "#[fg=colour52]#S #[fg=yellow]#I #[fg=cyan]#P | #{prefix_high
 # 设置状态栏右部宽度
 set -g status-right-length 80
 # 设置状态栏右边内容，这里设置为时间信息
-set -g status-right "CPU:#{cpu_percentage} | %a %h-%d %H:%M "
-#set -g status-left 'Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+set -g status-right "NetSpped #{net_speed} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} CPU:#{cpu_percentage} | %a %h-%d %H:%M "
 # 窗口信息居中显示
 set -g status-justify centre
  
